2019-03-18 0.8.6 alpha
Fixed initial preset selection in XG mode.

2019-03-13 0.8.6 alpha
Set preset bank correctly in XG mode.
Removed High DPI handling code. Good luck to Windows users out there.
Skulpture style: dials are no longer blurred if scaled.

2019-01-25 0.8.6 alpha
Fixed a crash caused by improper preset probing.
Further ensure CC#8 is initialized correctly.
Minor string table update.

2019-01-24 0.8.6 alpha
Migrated to fluidsynth 2.x.
Moved to mxe for Windows build.
Fixed default value for CC#8.

2018-10-02 0.8.6 alpha
Fixed layout with Qt 5.11.
Minor code cleanups in qmpchannelswindow.
Documentation update.

2018-06-18 0.8.6 alpha
Precise playback (no more slowdown).
Also the visualization should now sync better.

2018-03-19 0.8.6 alpha
Unified meta event reading code.
Fixed playlist dialog behaving oddly.

2018-02-07 0.8.6 alpha
Forgot to unregister UI hooks.

2018-02-03 0.8.6 alpha
Minor performance improvement to the 3D visualization.

2018-01-29 0.8.6 alpha
Fixed FTBFS with Qt 5.6.

2017-10-18 0.8.6 alpha
API changes:
  - Lots of renaming.
  - qmpVisualizationIntf no longer exists. Visualization
  is now just a normal functionality.
  - Added UI Hooks.
Fixed a bunch of crashes and insanities in the
visualization plugin.
I think it's now time for 0.8.6 alpha.

2017-08-22 0.8.6 indev
Windows type of functionality windows is now Qt::Dialog.
Initialization fluidsynth asynchronously.
Minor documentation update.

2017-08-10 0.8.6 indev
Windows of several main functionalities are no longer
QDialogs. Fixed unexpected behavior.
Now visualization window can be closed by sending it
a close signal.
Trying a solution to address the problem that prevents
plugins from being loaded correctly in Windows if the
path contains Chinese characters. Not even tried to
build in Windows though.

2017-06-22 0.8.6 indev
Minor bug fixes.
SMF reader finally takes chunk length into account.
Do not prepend sysex header to F0h sysex. Let the
readers do it.